--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 recursive-include acidcli/acid/agents *
 recursive-include acidcli/acid/roles *
 recursive-include acidcli/acid version
-recursive-exclude acidcli .artifactignore *.pyc
+recursive-exclude acidcli/acid/agents *.yml .artifactignore
+recursive-exclude acidcli *.pyc
