--- a/tests/playbook.yml
+++ b/tests/playbook.yml
@@ -3,6 +3,8 @@
   become: true
   roles:
     - name: azure_pipeline_agent
-    - name: accelize.accelize_drm
-      vars:
-        accelize_drm_python: false
+
+  tasks:
+    - name: Custom playbook loaded
+      debug:
+        msg: Custom playbook successfully loaded
